# pytorch-code-reading

./: aten_cpu_simple.cpp  aten_gpu_empty.cpp
instrument/: CMakeLists.txt  aten_cpu_empty.cpp  aten_gpu_legacy.cpp  aten_gpu_simple.cpp
